--- a/package.json
+++ b/package.json
@@ -17,22 +17,29 @@
     "@fontsource/rubik": "4.5.10",
     "@ryansonshine/commitizen": "4.2.8",
     "@ryansonshine/cz-conventional-changelog": "3.3.4",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.1",
+    "ms": "^2.1.3",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.4.0"
+    "react-icons": "4.4.0",
+    "react-tsparticles": "^2.1.3",
+    "swr": "^1.3.0",
+    "tsparticles": "^2.1.3"
   },
   "devDependencies": {
+    "@types/ms": "^0.7.31",
     "@types/node": "18.0.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "10.4.7",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2",
+    "eslint": "^8.19.0",
+    "eslint-config-galex": "^4.1.5",
     "postcss": "8.4.14",
     "semantic-release": "19.0.3",
     "tailwindcss": "3.1.6",
-    "typescript": "4.7.4"
+    "typescript": "^4.7.4"
   },
   "config": {
     "commitizen": {
